Updates on beautifying web features

--- a/beautifying/index.html
+++ b/beautifying/index.html
@@ -16,8 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,300&display=swap"
         rel="stylesheet">
     <!-- === CSS === -->
-    <!-- <link rel="stylesheet" href="assets/css/main.css"> -->
     <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
@@ -46,23 +46,24 @@
 
         <!-- == Hero == -->
         <section id="hero">
-         <div class="container">
-            <div class="row">
-                <div class="hero-txt">
-                    <h1>Give your Fashion<br>a New style!</h1>
-                    <p>What you wear is how you present yourself<br>to the world especially today when human contacts
-                        are so quick.<br>Fashion is instant language.</p>
-                    <a href="" class="btn">Explore Now &#10137;</a>
+            <div class="container">
+                <div class="row">
+                    <div class="hero-txt">
+                        <h1>Give your Fashion<br>a New style!</h1>
+                        <p>What you wear is how you present yourself<br>to the world especially today when human
+                            contacts
+                            are so quick.<br>Fashion is instant language.</p>
+                        <a href="pages/explore.html" class="btn">Explore Now &#10137;</a>
+                    </div>
+                    <div class="hero-img"><img src="assets/img/african-mrembo.png"></div>
                 </div>
-                <div class="hero-img"><img src="assets/img/african-mrembo.png"></div>
             </div>
-         </div>
         </section>
 
         <!-- == Todays deals == -->
         <section class="todays_deals">
             <div class="container">
-                <h2>Today's Deals</h2>
+                <h2 class="today-title">Today's Deals</h2>
                 <div class="row">
                     <div class="col-2"><img src="assets/img/A7.jpg"></div>
                     <div class="col-2"><img src="assets/img/N1.jpg"></div>
@@ -76,41 +77,49 @@
             <div class="container">
                 <h3 class="title">More on Today's Deals!!</h3>
                 <div class="row">
-                    <div class="col-3"><img src="assets/img/J7.jpg">
+                    <div class="col-3">
+                        <img src="assets/img/J7.jpg">
                         <h4><b>Women Suit</b></h4>
-                        <p>Tshs.54,000/=</p>
+                        <p>Tshs 54,000/=</p>
                     </div>
-                    <div class="col-3"><img src="assets/img/N2.jpg">
+                    <div class="col-3">
+                        <img src="assets/img/N2.jpg">
                         <h4><b>Men Suit</b></h4>
-                        <p>Tshs.99,850/=</p>
+                        <p>Tshs 99,850/=</p>
                     </div>
-                    <div class="col-3"><img src="assets/img/K8.jpg">
+                    <div class="col-3">
+                        <img src="assets/img/K8.jpg">
                         <h4><b>Classy Style</b></h4>
-                        <p>Tshs.76,000/=</p>
+                        <p>Tshs 76,000/=</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-3"><img src="assets/img/A2.jpg">
+                    <div class="col-3">
+                        <img src="assets/img/A2.jpg">
                         <h4><b>Men Classic Cloths</b></h4>
-                        <p>Tshs.150,000/=</p>
+                        <p>Tshs 150,000/=</p>
                     </div>
-                    <div class="col-3"><img src="assets/img/K2.jpg">
+                    <div class="col-3">
+                        <img src="assets/img/K2.jpg">
                         <h4><b>Women Fashion</b></h4>
-                        <p>Tshs.75,000/=</p>
+                        <p>Tshs 75,000/=</p>
                     </div>
-                    <div class="col-3"><img src="assets/img/C4.jpg">
+                    <div class="col-3">
+                        <img src="assets/img/C4.jpg">
                         <h4><b>Baby's Collection</b></h4>
-                        <p>Tshs.100,000/=</p>
+                        <p>Tshs 100,000/=</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-3"><img src="assets/img/C2.jpg">
+                    <div class="col-3">
+                        <img src="assets/img/C2.jpg">
                         <h4><b>Girly Cloths</b></h4>
-                        <p>Tshs.80,000/=</p>
+                        <p>Tshs 80,000/=</p>
                     </div>
-                    <div class="col-3"><img src="assets/img/L6.jpg">
+                    <div class="col-3">
+                        <img src="assets/img/L6.jpg">
                         <h4><b>Cool Snickers</b></h4>
-                        <p>Tshs.55,000/=</p>
+                        <p>Tshs 55,000/=</p>
                     </div>
                 </div>
             </div>
