--- a/beautifying/pages/contact.html
+++ b/beautifying/pages/contact.html
@@ -1,117 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-<title>Customer Service |  Beautifying Collection </title>
-<link rel="stylesheet" href="assets/css/style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,300&display=swap" rel="stylesheet">
 
+<head>
+    <!-- === Metadata === -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- === Title === -->
+    <title>Contact | Beautifying Collection</title>
+    <!-- === Favicon -->
+    <link rel="shortcut icon" href="../assets/img/logo/logo.png" type="image/x-icon">
+    <!-- === Google fonts === -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,300&display=swap"
+        rel="stylesheet">
+    <!-- === CSS === -->
+    <link rel="stylesheet" href="../assets/css/contact.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
+
 <body>
-    <div class="header">
+
+    <!-- ===== Header ===== -->
+    <header class="header">
         <div class="container">
             <div class="navbar">
-                <div class="logo">
-                    <img src="assets/images/logo.png"width="125px">
+                <div class="nav-brand">
+                    <img src="../assets/img/logo/logo.png">
                 </div>
-                <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="pro.html">Latest Trends</a></li>
-            <li><a href="customer.html">Customer Service</a></li>
-        </ul>
+                <nav class="navbar-nav">
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="trends.html">Latest Trends</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
                 </nav>
             </div>
-
-<!------------service providers---------->
-
-<div class="testimonial">
-
-    <div class="small-container">
-        <div class="row row-2">
-            <h2><b><i>For More Infomation Please Contact Our Service Providers</i></b></h2>
         </div>
-        <div class="row">
-            <div class="col-3">
-                <p>Hello! My name is Neville Greyson and I am the founder of this store. For those who need to access our products please contact me through;<br>&#9733;nevilegreyson001@gmail.com
-                <br>+255782777358/+255686488782</p>
-                <img src="assets/images/nev.jpg"> 
-                <h3>Neville Greyson</h3>
-            </div> 
-            <div class="col-3">
-                <p>Hello! My name is Dafrosa Isack and I am the manager of this store. For more information or if you have any problem with our services please contact me through;<br>&#9733;daphylove@gmail.com
-                    <br>+255606279379/+2557823415</p>
-                <img src="assets/images/frosa.jpg">
-                <h3>Dafrosa Isack</h3>
+    </header>
+
+    <!-- ====== Main ====== -->
+    <main>
+
+        <!-- == Contact == -->
+        <section class="contact">
+            <div class="container">
+                <h1 class="title">Contact Us</h1>
+                <div class="grid-2">
+                    <div class="card">
+                        <h1>Location</h1>
+                        <p>
+                            783 Kipanga Street, Kinondoni
+                            <br> Dar es Salaam Tanzania
+                        </p>
+                    </div>
+                    <div class="card">
+                        <h1>Phone</h1>
+                        <p>
+                            +255 693 393 457
+                            <br> +255 717 393 457
+                        </p>
+                    </div>
+                </div>
+                <div class="grid-row grid-2">
+                    <div class="card">
+                        <h1>Email</h1>
+                        <p>
+                            info@beautifying.co.tz
+                            <br> customercare@beautifying.co.tz
+                        </p>
+                    </div>
+                    <div class="card">
+                        <h1>Website</h1>
+                        <p>
+                            www.beautifying.co.tz
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="col-3">
-                <p>Hello! My name is Prosper Mbuma and I am the IT specialist for the store. For those having problems visiting our website please comment on my email or contact me;<br>&#9733;prospermbuma34@gmail.com
-                    <br>+255623447612/+255755153715</p>
-                <img src="assets/images/fam.jpg">
-                <h3>Prosper Mbuma</h3>
+        </section>
+
+        <!-- == Map == -->
+        <section class="map">
+            <div class="container">
+                <iframe title="IFM Map"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.6367935266585!2d39.29122961471989!3d-6.8139554950752075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4b113fc2db53%3A0x1735d30e3398bba!2sInstitute%20of%20Finance%20Management%20(IFM)!5e0!3m2!1sen!2stz!4v1622844016338!5m2!1sen!2stz"
+                    allowfullscreen="" loading="lazy">
+                </iframe>
             </div>
-            </div>
-        </div>
-    </div>
+        </section>
 
+    </main>
 
-        </div>
-       
-
-</div>
-
-
-
-
-   
-   
-     <!-----------footer-------------------->
-     <div class="footer">
+    <!-- ===== Footer ===== -->
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="footer-col-1">
                     <h3>Download Our App</h3>
                     <p>Download App <br>for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="assets/images/mom.jpg">
-                        <img src="assets/images/aye.jpg">
+                        <img src="../assets/img/app_stores/google.jpg">
+                        <img src="../assets/img/app_stores/apple.jpg">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <h4 class="logo"><b><i>Beautifying Collection</i></b></h4>
+                    <h2>Beautifying Collection</h2>
                     <p>We make our world a beautiful place!!<br>Join us for more! You name it <br> we show it</p>
                 </div>
                 <div class="footer-col-3">
                     <h3>Useful Links</h3>
-                    <ul>
-                        <li>Coupons</li>
-                        <li>Blog Post</li>
-                        <li>Return Policy</li>
-                        <li>Join Affiliate</li>
-                    </ul>
+                    <p>Coupons</p>
+                    <p>Blog Post</p>
+                    <p>Return Policy</p>
+                    <p>Join Affiliate</p>
                 </div>
                 <div class="footer-col-4">
                     <h3>Follow us</h3>
-                    <ul>
-                        <li>Facebook</li>
-                        <li>Instagram</li>
-                        <li>Twitter</li>
-                        <li>YouTube</li>
-                    </ul>
+                    <p>Facebook</p>
+                    <p>Instagram</p>
+                    <p>Twitter</p>
+                    <p>YouTube</p>
                 </div>
             </div>
+
+            <!-- horizontal line -->
             <hr>
-            <p class="copyright">@Beautifying Collection</p>
+
+            <!-- Copyright -->
+            <p class="copyright"> &copy; <span class="year"></span> | Beautifying Collection</p>
         </div>
-    </div>
+    </footer>
 
-
-
-
-
+    <!-- ===== Scripts ===== -->
+    <script src="../assets/js/main.js"></script>
 
 </body>
+
 </html>
