--- a/beautifying/pages/explore.html
+++ b/beautifying/pages/explore.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- === Title === -->
-    <title>About | Beautifying Collection</title>
+    <title>Trends | Beautifying Collection</title>
     <!-- === Favicon -->
     <link rel="shortcut icon" href="../assets/img/logo/logo.png" type="image/x-icon">
     <!-- === Google fonts === -->
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,300&display=swap"
         rel="stylesheet">
     <!-- === CSS === -->
-    <link rel="stylesheet" href="../assets/css/about.css">
+    <link rel="stylesheet" href="../assets/css/explore.css">
     <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 
@@ -44,79 +44,53 @@
     <!-- ====== Main ====== -->
     <main>
 
-        <!-- == About == -->
-        <section class="about">
+        <!-- == Categories == -->
+        <section class="categories">
             <div class="container">
-                <h1 class="title">Who We Are</h1>
+                <h1 class="title">See More on Today's Deals!!</h1>
                 <div class="row">
-                    <div class="card">
-                        <h1>History</h1>
-                        <p>A people without the knowledge of their past history origin and culture is like a tree without root. We started as a family and we'll finish this together. Beautifying Collection started for the aim of selling clothes and other assessories that people need and want and achieve with what they desire!
-                        </p>
+                    <div class="col-3"><img src="../assets/img/lovesweet-singh-usQ7cDJUYXE-unsplash.jpg">
+                        <h4><b>Diamond Earings</b></h4>
+                        <p>Tshs 64,000/=</p>
                     </div>
-                    <div class="card">
-                        <h1>Mission</h1>
-                        <p>To be Earth's most customer-centric company, where customers can find and discover anything they might want to buy online, and endeavors to offer its customers the lowest possible prices.</p> 
+                    <div class="col-3"><img src="../assets/img/dur.jpg">
+                        <h4><b>Women Casual Wear</b></h4>
+                        <p>Tshs 45,850/=</p>
+                    </div>
+                    <div class="col-3"><img src="../assets/img/cor.jpg">
+                        <h4><b>Classy Style</b></h4>
+                        <p>Tshs 90,000/=</p>
+                    </div>
+                </div>
+                
+                <div class="row">
+                    <div class="col-3"><img src="../assets/img/mira.jpg">
+                        <h4><b>Night Classic Cloths</b></h4>
+                        <p>Tshs 60,000/=</p>
+                    </div>
+                    <div class="col-3"><img src="../assets/img/alex-perri-At__EKm5PGE-unsplash.jpg">
+                        <h4><b>Casual Outfit</b></h4>
+                        <p>Tshs 35,000/=</p>
+                    </div>
+                    <div class="col-3"><img src="../assets/img/kayan-baby-kPXq-jxhMkk-unsplash.jpg">
+                        <h4><b>Baby's Collection</b></h4>
+                        <p>Tshs 43,000/=</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-3"><img src="../assets/img/mudy.jpg">
+                        <h4><b>Men Suit</b></h4>
+                        <p>Tshs 85,000/=</p>
+                    </div>
+                    <div class="col-3"><img src="../assets/img/praveen-gupta-gcXswafq_zg-unsplash.jpg">
+                        <h4><b>Men Wear</b></h4>
+                        <p>Tshs 24,000/=</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- == Team == -->
-        <section class="team">
-            <div class="container">
-                <h1 class="title">Meet Our Team</h1>
-                <div class="row row-1">
-                    <div class="cardy">
-                        <div class="card-img">
-                            <img src="../assets/img/frosa.jpg" alt="">
-                        </div>
-                        <div class="card-body">
-                            <h3>DAFROSA NYANDA</h3>
-                            <p>CEO & Founder</p>
-                        </div>
-                    </div>
-                    <div class="cardy">
-                        <div class="card-img">
-                            <img src="../assets/img/nev.jpg" alt="">
-                        </div>
-                        <div class="card-body">
-                            <h3>NEVILLE GREYSON</h3>
-                            <p>CO-Founder</p>
-                        </div>
-                    </div>
-                    <div class="cardy">
-                        <div class="card-img">
-                            <img src="../assets/img/K8.jpg" alt="">
-                        </div>
-                        <div class="card-body">
-                            <h3>TEREZA WEBIRO</h3>
-                            <p>Digital Content Creator</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row row-2">
-                    <div class="cardy">
-                        <div class="card-img">
-                            <img src="../assets/img/N4.jpg" alt="">
-                        </div>
-                        <div class="card-body">
-                            <h3>CATHERINE MAKALE</h3>
-                            <p>Marketing Manager</p>
-                        </div>
-                    </div>
-                    <div class="cardy">
-                        <div class="card-img">
-                            <img src="../assets/img/Prosper.jpg" alt="">
-                        </div>
-                        <div class="card-body">
-                            <h3>PROSPER MBUMA</h3>
-                            <p>Marketing Manager</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
 
     <!-- ===== Footer ===== -->
