--- a/beautifying/pages/trends.html
+++ b/beautifying/pages/trends.html
@@ -29,19 +29,21 @@
     <!-- ===== Header ===== -->
     <header class="header">
         <div class="container">
-            <div class="navbar">
+            <nav class="navbar">
                 <div class="nav-brand">
                     <img src="../assets/img/logo/logo.png">
                 </div>
-                <nav class="navbar-nav">
-                    <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="trends.html">Latest Trends</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
+                <label for="check" id="check-btn">
+                    <i class="fas fa-th-large"></i>
+                </label>
+                <input type="checkbox" name="check" id="check">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="trends.html" class="nav-link">Latest Trends</a></li>
+                    <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
