--- a/beautifying/pages/about.html
+++ b/beautifying/pages/about.html
@@ -80,7 +80,7 @@
                 <div class="row row-1">
                     <div class="cardy">
                         <div class="card-img">
-                            <img src="../assets/img/frosa.jpg" alt="">
+                            <img src="../assets/img/dafrosa.jpg" alt="">
                         </div>
                         <div class="card-body">
                             <h3>DAFROSA NYANDA</h3>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="cardy">
                         <div class="card-img">
-                            <img src="../assets/img/K8.jpg" alt="">
+                            <img src="../assets/img/tereza.jpg" alt="">
                         </div>
                         <div class="card-body">
                             <h3>TEREZA WEBIRO</h3>
