--- a/beautifying/pages/contact.html
+++ b/beautifying/pages/contact.html
@@ -54,7 +54,7 @@
         <section class="contact">
             <div class="container">
                 <h1 class="title">Contact Us</h1>
-                <div class="grid-2">
+                <div class="row-gridy">
                     <div class="card">
                         <h1>Location</h1>
                         <p>
@@ -70,12 +70,12 @@
                         </p>
                     </div>
                 </div>
-                <div class="grid-row grid-2">
+                <div class="row-gridy grid-row">
                     <div class="card">
                         <h1>Email</h1>
                         <p>
                             info@beautifying.co.tz
-                            <br> customercare@beautifying.co.tz
+                            <br> care@beautifying.co.tz
                         </p>
                     </div>
                     <div class="card">
