--- a/beautifying/pages/trends.html
+++ b/beautifying/pages/trends.html
@@ -57,10 +57,10 @@
                     <h2 class="title">Women Collection</h2>
                 </div>
                 <div class="row">
-                    <div class="col-3"><img src="../assets/img/classical.jpg">
+                    <!-- <div class="col-3"><img src="../assets/img/classical.jpg">
                         <h4><b>Women Dress</b></h4>
                         <p>Tshs 94,000/=</p>
-                    </div>
+                    </div> -->
                     <div class="col-3"><img src="../assets/img/J5.jpg">
                         <h4><b>Casual Outfits</b></h4>
                         <p>Tshs 60,850/=</p>
@@ -79,10 +79,10 @@
                     <h2 class="title">Men's Collection</h2>
                 </div>
                 <div class="row">
-                    <div class="col-3"><img src="../assets/img/A9.jpg">
+                    <!-- <div class="col-3"><img src="../assets/img/A9.jpg">
                         <h4><b>Men Suit</b></h4>
                         <p>Tshs 180,000/=</p>
-                    </div>
+                    </div> -->
                     <div class="col-3"><img src="../assets/img/A4.jpg">
                         <h4><b>Dope Hoodies</b></h4>
                         <p>Tshs 50,000/=</p>
@@ -103,10 +103,10 @@
                     <h2 class="title">Baby's Collection</h2>
                 </div>
                 <div class="row">
-                    <div class="col-3"><img src="../assets/img/C4.jpg">
+                    <!-- <div class="col-3"><img src="../assets/img/C4.jpg">
                         <h4><b>Baby's Offer</b></h4>
                         <p>Tshs 87,000/=</p>
-                    </div>
+                    </div> -->
                     <div class="col-3"><img src="../assets/img/J9.jpg">
                         <h4><b>Twins Collection</b></h4>
                         <p>Tshs 100,000/=</p>
@@ -133,10 +133,10 @@
                         <h4><b>Classic Watch</b></h4>
                         <p>Tshs 65,000/=</p>
                     </div>
-                    <div class="col-3"><img src="../assets/img/wat.jpg">
+                    <!-- <div class="col-3"><img src="../assets/img/wat.jpg">
                         <h4><b>Men Collection</b></h4>
                         <p>Tshs 100,000/=</p>
-                    </div>
+                    </div> -->
                     <div class="col-3"><img src="../assets/img/Sterling.jpg">
                         <h4><b>Sterling Bracelet</b></h4>
                         <p>Tshs 55,000/=</p>
