--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -64,14 +64,14 @@
                         <div class="card-body pt-1">
                             <div class="flex-space-between">
                                 <div class="head-txt">
-                                    <h1>City Harvest</h1>
-                                    <h2>SERVICE SCHEDULE</h2>
+                                    <h1>TAG City Harvest</h1>
+                                    <h2>SUNDAY SERVICES</h2>
                                 </div>
                                 <div class="content-txt">
                                     <p>
                                         First service:
                                         <br>
-                                        <small> 07:00 AM - 09:30 AM</small>
+                                        <small> 07:00 AM - 09:00 AM</small>
                                         <br>
                                         ENGLISH
                                     </p>
@@ -80,7 +80,7 @@
                                     <p>
                                         Second service:
                                         <br>
-                                        <small>10:30 AM - 13:00 PM</small>
+                                        <small>09:30 AM - 12:30 PM</small>
                                         <br>
                                         SWAHILI
                                     </p>
