Updates on navbar

--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -91,6 +91,15 @@
                 </div>
             </div>
         </section>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla earum omnis quasi, tempore nihil ex perferendis nemo, excepturi cupiditate quaerat corporis quibusdam fugiat consequatur eos reiciendis incidunt reprehenderit minus cumque.
+        Vero, eligendi. Architecto numquam quas provident reprehenderit ullam repudiandae quos, autem dolorem, sequi, impedit illo. Rerum accusantium, aspernatur eum saepe aperiam in! Libero natus cupiditate tempora quibusdam nihil explicabo animi.
+        Alias odit maxime repellat ad consectetur veniam! Quae obcaecati nulla animi minima ea possimus. Maxime nihil nam, perspiciatis possimus quam facere dicta eaque, tenetur facilis cumque corporis id explicabo? Molestiae.
+        Sint excepturi laudantium quo, laborum nemo iure labore molestiae dolores nulla, laboriosam obcaecati amet sed facere nihil vero in sit, aliquid molestias provident! Repellendus voluptatum pariatur voluptatibus beatae, quae esse?
+        Doloremque expedita ratione inventore exercitationem voluptate eligendi incidunt, animi qui quod, quos praesentium laudantium soluta hic sapiente iusto enim. Rerum minima perferendis neque nihil numquam magni sequi aperiam eius repellat.
+        Veritatis id reiciendis enim deserunt! Impedit vitae iusto voluptas et repellat incidunt ea autem modi nobis fugiat vero, rerum, facilis quisquam necessitatibus consequatur tempora magnam accusantium inventore odio, quibusdam totam.
+        Voluptatem id veritatis optio. Eveniet quia esse veritatis sit repellendus optio? Dicta illo iusto sit suscipit voluptas doloremque accusamus debitis incidunt asperiores. Reprehenderit dolore suscipit possimus quis explicabo, ullam aliquid.
+        Ullam asperiores mollitia, debitis ex sed unde. Impedit quo tempora rem distinctio ab et totam inventore est, id voluptas animi dicta veritatis harum delectus eius quibusdam laborum ducimus ullam ipsum.
+        Ea eveniet ab eum aliquam quo rem officia. Ipsa odit accusamus a eveniet, repellat eaque nihil, id dicta voluptates maxime minus nisi officiis cum suscipit laborum obcaecati repellendus atque ad.
     </main>
 
     <!-- === Footer === -->
@@ -99,6 +108,7 @@
     </footer>
 
     <!-- === Scripts === -->
+    <script src="assets/js/main.js"></script>
     <script>
 
     </script>
