More beautiful updates on navbar

--- a/cityharvest/app/about.html
+++ b/cityharvest/app/about.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap" rel="stylesheet">
+    <!-- === AOS (Animation On Scroll CSS) CDN === -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- === Title === -->
     <title>City Harvest Church</title>
     <!-- === CSS === -->
@@ -32,7 +34,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#home" class="nav-link active">About</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Services</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Sermons</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Publication</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Ministries</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
@@ -97,9 +99,16 @@
     </footer>
 
     <!-- === Scripts === -->
-    <script>
-
-    </script>
+    <!-- JQuery CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous">
+        </script>
+    <!-- AOS (Animation On Scroll JS) CDN -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- Main JS -->
+    <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/about.js"></script>
 </body>
 
 </html>
